# decode_lab_code

./: LICENSE  README.md  __init__.py  pyproject.toml  setup.py
Old Version/dep/: preprocessCaiman.py  tester2_caiman.ipynb
decode_analyses/notebooks/: formatting_custom_code.ipynb  notebook_caimanWrapper.ipynb
decode_analyses/scripts/: NWBuserdays.ipynb  nwbSpikeInterface.py
decode_converters/ephys/: nlx2nwb.py  nlx2nwb_2.py
decode_lab_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
decode_trash/: notebook_convertNeurlynx.ipynb
dep/: convertNeuralynx.py  create_nwb2.py  file-to-cnmfe-backup.html
dep/dep/: readNWB.py  startup.py  tester_caiman.ipynb
notebooks/dep/: script_cnm.py
notebooks/github_demos/: cnmfe_mescore_miniscope.ipynb  cnmfe_viz_4D.ipynb  mcorr_cnmf_labData_consolidated.ipynb
notebooks/projects/: CNMFE.ipynb  TrimMovie.ipynb  Untitled.ipynb  VizResults.ipynb  avi_to_tif.ipynb  three-point-att-vs-pct.html  zoom_indices.npy
nwb-cache/: cache
scripts_and_notebooks/Dep/: script_cnm.py  understanding_neo.py
scripts_and_notebooks/data2nwb/: create_nwb_ophys_slice.py  create_nwb_ophys_slice_v2.py  notebook_createEphysNWB.ipynb  notebook_createNWB_ophysSlice.ipynb  notebook_createNWB_ophysSlice_v2.ipynb
scripts_and_notebooks/edf-to-nwb/: tester.py
scripts_and_notebooks/github_demos/: demo_pipeline_cnmfE.ipynb  mcorr_cnmf_labData_consolidated.ipynb  mes_test.ipynb
scripts_and_notebooks/miniscope-to-nwb-draft/: script.py
scripts_and_notebooks/walkthrough/: NWBwidgets.ipynb  Notebook1_Ephys2NWB_EphysExplore.ipynb  (+2 more)
(+142 files in other folders)
